--- a/13.html
+++ b/13.html
@@ -15,8 +15,10 @@
   </head>
   <body>
     <div class="topmenu">
-      <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
-      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
+      <a href="index.html"
+        ><img src="sm news logo.png" alt="smnewslogo" class="logo"
+      /></a>
+      <h1><a href="index.html" class="smnews" id="smnews">SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
@@ -32,7 +34,7 @@
           muted
           controls
         ></video>
-        <br>
+        <br />
         <h2 class="article">
           Hosted by <a href="mailto:233623@students.srvusd.net">Aarav Tandon</a>
         </h2>
@@ -41,12 +43,29 @@
       <h2 class="article">Recents</h2>
     </center>
     <div class="recents1">
-      <h2>Prisoners Escape the<br> Sacramento Prison</h2>
-      <a href="Jailbreak at Sacramento (1).mp4" target="_blank"><video src="Jailbreak at Sacramento (1).mp4" class="recents13">dogs</video></a>
+      <h2>
+        Prisoners Escape the<br />
+        Sacramento Prison
+      </h2>
+      <a href="Jailbreak at Sacramento (1).mp4" target="_blank"
+        ><video src="Jailbreak at Sacramento (1).mp4" class="recents13">
+          dogs
+        </video></a
+      >
     </div>
     <div class="recents1">
       <h2>Dogs Trample the USA</h2>
-      <a href="https://drive.google.com/file/d/15AKo-QIb3CXWxBVmjX4iGkrYf-KM4Ewk/view?usp=sharing" target="_blank"><video src="https://drive.google.com/file/d/15AKo-QIb3CXWxBVmjX4iGkrYf-KM4Ewk/view?usp=sharing" class="recents13" poster="Screen Shot 2022-03-20 at 10.52.48 AM.png">dogs</video></a>
+      <a
+        href="https://drive.google.com/file/d/15AKo-QIb3CXWxBVmjX4iGkrYf-KM4Ewk/view?usp=sharing"
+        target="_blank"
+        ><video
+          src="https://drive.google.com/file/d/15AKo-QIb3CXWxBVmjX4iGkrYf-KM4Ewk/view?usp=sharing"
+          class="recents13"
+          poster="Screen Shot 2022-03-20 at 10.52.48 AM.png"
+        >
+          dogs
+        </video></a
+      >
     </div>
     <center><h2 class="article">(Sound Will Play When Clicked)</h2></center>
   </body>
