--- a/index.html
+++ b/index.html
@@ -25,19 +25,41 @@
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
+    <center>
+      <div class="toparticle">
+        <h2 class="article">A Losers Guide to Truth or Dare
+        </h2>
+        <p class="text">Image from <a href="https://www.truthordareofficial.com/game-rules/">Truth or Dare Official</a></p>
+        <img src="https://www.truthordareofficial.com/article/en/game-rules/feature-image-1200x630.jpg" alt="Truth or Dare">
+        <h4 class="text">
+          For a real truth or dare, one must present the item (the dare) that the victim must be able to recognize. In this case,<br> we will be using rat feces. Another rule of thumb is to always present the dare IRL, so one must gain the expected reaction and the optimal amount of fun from this<br> experience. The implication of a dare is also something used in great dares.
+
+        A good dare: "Spreading rat feces on my grandma's spatula is so annoying, can you<br> spread it for me?"
+
+        The above is a great dare, as it implies that the giver of the dare (GOD) is already doing this, in fact, it also applies fun to the victim as well. The GOD<br> has successfully been able to imply, be there in person, and has presented something recognizable (though I don't recommend this dare, it's quite boring and also<br> too slow (Waiting for the person to go to the grandma's house)).
+
+        For a truth, simply asking anything embarrassing, (crushes, secrets, search history) should be good enough.<br> Be keen, however, as a common excuse is that they don't have a crush, secret, or other truths so they, therefore, can not share it. That's simply impossible. They are<br> someone with hormones and also they accepted a truth/dare.
+        </h4>
+        <h4 class="text" style="font-size: larger;">
+          This article was written by
+          <a href="">Anonymouse (a mouse wrote this)</a>
+          </h4>
+      </div>
+    </center>
     <div class="article8">
       <h2 class="article">Shrek is Taking Over The World: Part 2
       </h2>
-      <p class="text">Image from <a href="https://www.huffpost.com/entry/black-cat-monday-night-football-photoshop-battle_n_5dc2b50ae4b0b0861f916b97">Huffpost</a></p>
-      <img src="download.jpg" alt="football cat">
+      <p class="text">Image from <a href="https://en.wikipedia.org/wiki/Earth">Wikipedia</a></p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/440px-The_Blue_Marble_%28remastered%29.jpg" alt="earth">
       <h4 class="text">
         Earlier today a new country was discovered called<br> The Shrekonian Republic. This country’s population<br> is not yet known but it is known that the country is<br> full of variations of Shrek. Not much is known about<br> this country because it is fairly new and unheard of<br> but the country is proving itself useful by being one<br> of the top candle producers in the world. As you know<br> Shrek can make candles from the stuff in his ears<br> and that there are a bunch of slaves picking the stuff<br> out of their ears 24/7 to produce candles. Because<br> of this The Shrekonian Republic is now richer than<br> most countries and only a few countries top it in<br> wealth. The geography is mostly swamplands so it is<br> hard to get around. If you are planning to go on<br> vacation to The Shrekonian Republic it is recommended<br> to bring boots no matter what. President Boe Jiden<br> will be going there next friday to discuss trade and other stuff. 
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="">Luke Schulman</a>
+        <a href="">Nathan Chow</a>
         </h4>
     </div>
+
     <iframe class="googleform"src="https://docs.google.com/forms/d/e/1FAIpQLSdWgRmU9GZwCPYX9mYcM7IJqv6F4M21LXPCl4rIeSHEYFbQTw/viewform?embedded=true" width="640" height="734" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <center>
       <div class="toparticle">
