--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
     </div>
     <center>
       <div class="toparticle">
+        <h2 class="article">Students of Dine Dalley Middle School In Shock After Balloon Causes Evacuation
+        </h2>
+        <p class="text">Image Taken By <a href="">Arjun Mehrotra</a></p>
+        <img src="IMG_1611.png" alt="Sebas Benitez">
+        <h4 class="text">
+          The students of dine dalley middle school were in shock today after a balloon reportedly "activated the fire alarm." The fire alarm<br> rang at around 7:45 AM, 20 minutes before school starts in Dine Dalley. A reporter on the case was just "wandering around when all of a sudden<br> I heard a ringing and screams across the campus." Millions of students were heading to the corner of the blacktop, the only place where they were safe.<br> Then, when all hope was almost lost, the firetrucks arrived. You could hear sighs of relief from the students who thought they wouldn't make it. One kid<br> even started to cry and said "I don't want to lose my v-bucks!!!" because his Mom said to him earlier that when he died, she would take all his v-bucks.<br> Thankfully, everyone got out safe and the balloon was sent to jail.
+        </h4>
+        <h4 class="text" style="font-size: larger;">
+          This article was written by
+          <a href="">Arjun Mehrotra</a>
+          </h4>
+      </div>
+    </center>
+    <center>
+      <div class="toparticle">
         <h2 class="article">New President: Sebas Benitez
         </h2>
         <p class="text">Image from <a href="twitter.com">Twitter</a></p>
