--- a/13.html
+++ b/13.html
@@ -15,12 +15,11 @@
   </head>
   <body>
     <div class="topmenu">
-      <a href="index.html"
-        ><img src="sm news logo.png" alt="smnewslogo" class="logo"
-      /></a>
-      <h1><a href="index.html" class="smnews" id="smnews">SMNews</a></h1>
+      <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
+      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
+    </div>
     </div>
     <center>
       <div class="video13">
