--- a/index.html
+++ b/index.html
@@ -26,6 +26,41 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
+      <h2 class="article">a rap or something that my friend made</h2>
+      <h4 class="text">Smnews is really whats needed<br>
+        There's no point of arguing, it's seamless<br>
+        With its maker Arjun, has wigginton core<br>
+        He made it so well, its definitely not a bore (i think)<br>
+        A lot of people post cool articles on it<br>
+        Like mostly random things<br>
+        But it's probably not true, and mostly stupid (like me)<br>
+        SMnews is now known wide and far (isnt in far and wide)<br>
+        And even steph curry, gifted them a car (he did)<br>
+        With this new car, smnews blew up pretty high<br>
+        Now smnews is known worldwide (wow then why am i not making any money)<br>
+        With their stock going up, like the gas prices (lol imagine)<br>
+        Smnews is now dominating<br>
+        Cnn is being demolished<br>
+        They were probably<br>
+        The bad polis (idek)<br>
+        Kron 4 is on the loose (idk who that is)<br>
+        They were probably<br>
+        Drinking all the booze (i probably should have censored that)<br>
+        Smnews is now the best<br>
+        It was put to the test<br>
+        Big thanks to Aarav and Elijah<br>
+        The were great helpers<br>
+        And the greatest developers<br>
+        Another thanks to Shaurya and Audrey<br>
+        Advertising through the land<br>
+        They now drive limos, not taxi cabs (i want a limo too 😔 )<br>
+        Smnews is now what's needed<br>
+        There's no point of arguing, it’s seamless (no not really)
+        </h4>
+        <h2 class="article">written by krish jaisingh and comments by arjunnnnnnn</h2>
+    </center>
+
+    <center>
       <div class="toparticle">
         <h2 class="article">Rock Middle School is Finally Closing Down
         </h2>
