--- a/index.html
+++ b/index.html
@@ -26,40 +26,114 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
-      <h2 class="article">a rap or something that my friend made</h2>
-      <h4 class="text">Smnews is really whats needed<br>
-        There's no point of arguing, it's seamless<br>
-        With its maker Arjun, has wigginton core<br>
-        He made it so well, its definitely not a bore (i think)<br>
-        A lot of people post cool articles on it<br>
-        Like mostly random things<br>
-        But it's probably not true, and mostly stupid (like me)<br>
-        SMnews is now known wide and far (isnt in far and wide)<br>
-        And even steph curry, gifted them a car (he did)<br>
-        With this new car, smnews blew up pretty high<br>
-        Now smnews is known worldwide (wow then why am i not making any money)<br>
-        With their stock going up, like the gas prices (lol imagine)<br>
-        Smnews is now dominating<br>
-        Cnn is being demolished<br>
-        They were probably<br>
-        The bad polis (idek)<br>
-        Kron 4 is on the loose (idk who that is)<br>
-        They were probably<br>
-        Drinking all the booze (i probably should have censored that)<br>
-        Smnews is now the best<br>
-        It was put to the test<br>
-        Big thanks to Aarav and Elijah<br>
-        The were great helpers<br>
-        And the greatest developers<br>
-        Another thanks to Shaurya and Audrey<br>
-        Advertising through the land<br>
-        They now drive limos, not taxi cabs (i want a limo too 😔 )<br>
-        Smnews is now what's needed<br>
-        There's no point of arguing, it’s seamless (no not really)
-        </h4>
-        <h2 class="article">written by krish jaisingh and comments by arjunnnnnnn</h2>
+    <h2 class="text">Press any button to change the background color of SMNews!!!!</h2>
+    <div class="colorbut">
+      <button onclick="changeColorRed()">Red</button>
+    </div>
+    <!--Change color to red on click-->
+    <script>
+      function changeColorRed() {
+        document.body.style.backgroundColor = "red";
+      }
+    </script>
+    <div class="colorbut">
+      <button onclick="changeColorYel()">Yellow</button>
+    </div>
+    <!--Change color to yellow on click-->
+    <script>
+      function changeColorYel() {
+        document.body.style.backgroundColor = "yellow";
+      }
+    </script>
+    <div class="colorbut">
+      <button onclick="changeColorGre()">Green</button>
+    </div>
+    <!--Change color to green on click-->
+    <script>
+      function changeColorGre() {
+        document.body.style.backgroundColor = "green";
+      }
+    </script>
+    <!--Reset it-->
+    <!--Reset button-->
+    <div class="colorbut">
+      <button onclick="reset()">Reset</button>
+    <script>
+      function reset() {
+        document.body.style.backgroundColor = "rgb(231, 231, 231)";
+      }
+    </script>
     </center>
-
+    <center><h1 class="text">Im gonna rename SMNews to a random word that you decide.<br> Each day i'll choose a new word.</h1></center>
+    <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe11Me-fcAYCaoc9DgvfvcKqscZH9RYM-5n1GT64v7NkIAsFw/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+    <center>
+      <div class="toparticle">
+        <h2 class="article">Pock Middle School Founded by Mr. Pock III
+        </h2>
+        <p class="text">Image From <a href="https://www.aps.edu/schools/schools/polk">Pock Middle School</a></p>
+        <img src="https://www.aps.edu/schools/schools/polk/@@images/72ab7ea0-bb93-4282-9feb-513a1e4ba560.jpeg" alt="pock middle school">
+        <h4 class="text">
+          "I like pock," said the creator of Pock Middle School, a new school for stupid students from Rock Middle School. Students quickly transferred<br> because they heard that Pock Middle School had clean toilets, which was a dream for all students in Rock Middle School. But when<br> they transferred they realized it was all fake and Pock Middle School had toilets which had been rubbed with poop. The students were still happy because<br> they got food, which was banned at Rock Middle School. The owner of Rock Middle School, Donald Rock said, "i am truly disgusted<br> with you poopy students for leaving this poopy school." (why do i keep writing about poop lol)
+        </h4>
+        <h4 class="text" style="font-size: larger;">
+          This article was written by
+          <a href="">mr monkey</a>
+          </h4>
+      </div>
+    </center>
+    <center><h1 class="text">i should make merch for smnews<br>
+                  - Arjun 2022</h1></center>
+    <!--make a top article-->
+    <hr>
+    <center><h1 class="text">AI MADE this article lol</h1></center>
+    <center>
+      <div class="toparticle">
+        <h2 class="article">
+          <a href="https://www.theguardian.com/world/2020/apr/02/trump-says-he-will-not-be-president-for-next-year-if-he-cannot-win-the-election-in-the-general-election"
+            >Trump says he will not be president for next year if he cannot win the
+            election in the general election</a
+          >
+        </h2>
+        <img src="trump.jpg" alt="trump" class="toparticleimage">
+        <p class="toparticletext">
+          <a href="https://www.theguardian.com/world/2020/apr/02/trump-says-he-will-not-be-president-for-next-year-if-he-cannot-win-the-election-in-the-general-election"
+            >The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+            The president has been nominated for the 2020 general election,
+            but the president has not been nominated for the 2020 presidential
+            election.
+            <br />
+            <br />
+    </center>
+    <hr>
     <center>
       <div class="toparticle">
         <h2 class="article">Rock Middle School is Finally Closing Down
