--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     </div>
     <div class="topmenu">
       <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
-      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
+      <h1><a href="index.html" class="smnews" id="smnews" >TaquaviousWiggleBottomProductions</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
+    
+    <center class="text" style="font-size: x-large;">TaquaviousWiggleBottomProductions is the new name for SMNews. Tommorow I will Pick a New One!</center>
     <center>
     <h2 class="text">Press any button to change the background color of SMNews!!!!</h2>
     <div class="colorbut">
