--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
-    <center><h2 class="article">I Made A New Website Called "imuseless". Go to <a href="imuseless.netlify.app">imuseless.netlify.app</a> to check it out.</h2></center>
+    <center><h2 class="article">I Made A New Website Called "imuseless". Go to <a href="https://imuseless.netlify.app">imuseless.netlify.app</a> to check it out.</h2></center>
     <center><img src="Screen Shot 2022-04-11 at 10.27.13 PM.png" alt="" style="width: auto;"></center>
     <center class="text" style="font-size: x-large;">TaquaviousWiggleBottomProductions is the new name for SMNews. Tommorow I will Pick a New One!</center>
     <center>
