--- a/index.html
+++ b/index.html
@@ -16,25 +16,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="sm news logo.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=David+Libre&family=Libre+Baskerville&display=swap" rel="stylesheet">
   </head>
   <body>
     </div>
     <div class="topmenu">
       <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
-      <h1><a href="index.html" class="smnews" id="smnews" >TaquaviousWiggleBottomProductions</a></h1>
+      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
-    <center><h2 class="article">I Made A New Website Called "imuseless". Go to <a href="https://imuseless.netlify.app">imuseless.netlify.app</a> to check it out.</h2></center>
+    <center>
+      <h1 class="goodbye">All Good Things Must Come to an End.<br><br>        - Geoffrey Chaucer 1374</h1>
+      <p class="goodbye2">SMNews was fun, but all good things must come to an end. It was really awesome<br> posting and making articles for everyone to see. I want to thank all the people who helped<br> me make SMNews, especially the original team. Goodbye!</p>
+    </center>
+    <!--<center><h2 class="article">I Made A New Website Called "imuseless". Go to <a href="https://imuseless.netlify.app">imuseless.netlify.app</a> to check it out.</h2></center>
     <center><img src="Screen Shot 2022-04-11 at 10.27.13 PM.png" alt="" style="width: auto;"></center>
     <center class="text" style="font-size: x-large;">TaquaviousWiggleBottomProductions is the new name for SMNews. Tommorow I will Pick a New One!</center>
     <center>
     <h2 class="text">Press any button to change the background color of SMNews!!!!</h2>
     <div class="colorbut">
       <button onclick="changeColorRed()">Red</button>
-    </div>
+    </div>--!>
     <!--Change color to red on click-->
-    <script>
+    <!--<script>
       function changeColorRed() {
         document.body.style.backgroundColor = "red";
       }
@@ -42,7 +49,6 @@
     <div class="colorbut">
       <button onclick="changeColorYel()">Yellow</button>
     </div>
-    <!--Change color to yellow on click-->
     <script>
       function changeColorYel() {
         document.body.style.backgroundColor = "yellow";
@@ -51,14 +57,11 @@
     <div class="colorbut">
       <button onclick="changeColorGre()">Green</button>
     </div>
-    <!--Change color to green on click-->
     <script>
       function changeColorGre() {
         document.body.style.backgroundColor = "green";
       }
     </script>
-    <!--Reset it-->
-    <!--Reset button-->
     <div class="colorbut">
       <button onclick="reset()">Reset</button>
     <script>
@@ -86,7 +89,6 @@
     </center>
     <center><h1 class="text">i should make merch for smnews<br>
                   - Arjun 2022</h1></center>
-    <!--make a top article-->
     <hr>
     <center><h1 class="text">AI MADE this article lol</h1></center>
     <center>
@@ -340,12 +342,14 @@
     <center>
       <iframe class="googleform2" src="https://docs.google.com/forms/d/e/1FAIpQLSc4vx8TZLWiaC_LmTNdcIGHz-_UjfcF4fi1IxWaIRyW4FX6Eg/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
+    !-->
     
 
-    <footer class="footer" style="text-align: center;">
+    <!--<footer class="footer" style="text-align: center;">
       <?xml version="1.0" encoding="iso-8859-1"?>
+    --!>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg class="youtube"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!--<svg class="youtube"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 461.001 461.001" style="enable-background:new 0 0 461.001 461.001;" xml:space="preserve">
 <a href="https://www.youtube.com/channel/UC5JQvQE5MLqnSj_ckfpqImg">
    <g>
@@ -357,8 +361,9 @@
 </a>
 </svg>
 <?xml version="1.0" encoding="iso-8859-1"?>
+--!>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg class="instagram"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!--<svg class="instagram"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 551.034 551.034" style="enable-background:new 0 0 551.034 551.034;" xml:space="preserve">
 <g id="XMLID_13_">
 	<a href="https://www.instagram.com/officialsmnews/">
