--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
-      <h1 class="goodbye">the new smnews - <u><a href="https://susnews.netlify.app"> susnews.netlify.app</a></u></h1>
+      <h1 class="text">Creators</h1>
+      <ul class="text">
+        <li>Aditi Bhuman</li>
+        <li>Aarav Tandon</li>
+        <li>Elijah Aviles</li>
+        <li>Audrey Kuizon</li>
+        <li>Shaurya Chavan</li>
+        <li>Arjun Mehrotra</li>
+      </ul>
       <br>
       <h1 class="goodbye">All Good Things Must Come to an End.<br><br>        - Geoffrey Chaucer 1374</h1>
       <p class="goodbye2">SMNews was fun, but all good things must come to an end. It was really awesome<br> posting and making articles for everyone to see. I want to thank all the people who helped<br> me make SMNews, especially the original team. Goodbye!</p>
